--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --mode development",
-    "build": "webpack --mode production"
+    "start": "serve dist",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
@@ -16,8 +16,9 @@
   },
   "devDependencies": {
     "css-loader": "^5.2.6",
+    "serve": "^12.0.0",
     "style-loader": "^3.0.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.2.3"
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.2"
   }
 }
