update(promise): test

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "es6-promise": "^4.2.8",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
