--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "promises-aplus-tests src/my_es6_promise",
+    "test2": "promises-aplus-tests src/test_promise_2",
     "start": "serve dist",
     "build": "webpack"
   },
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "css-loader": "^5.2.6",
+    "promises-aplus-tests": "^2.1.2",
     "serve": "^12.0.0",
     "style-loader": "^3.0.0",
     "webpack": "^5.38.1",
